--- a/Minha API/.env
+++ b/Minha API/.env
@@ -3,8 +3,8 @@ AMBIENTE_PROCESSO=producao
 # Configurações de conexão com o banco de dados
 DB_HOST='localhost'
 DB_DATABASE='sonar'
-DB_USER='root'
-DB_PASSWORD='root'
+DB_USER='Sonar'
+DB_PASSWORD=''
 DB_PORT='3006'
 
 # Configurações do servidor de aplicação
