--- a/Minha API/.env.dev
+++ b/Minha API/.env.dev
@@ -6,8 +6,8 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
 DB_DATABASE='sonar'
-DB_USER='root'
-DB_PASSWORD='root'
+DB_USER='Sonar'
+DB_PASSWORD=''
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
