--- a/Minha API/.env.dev
+++ b/Minha API/.env.dev
@@ -11,7 +11,8 @@ DB_PASSWORD=''
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
-APP_PORT=3333
+APP_PORT=3033
 APP_HOST=localhost
+MINHA_CHAVE = 'AIzaSyB7oMl-_EfiesZTz-ky4jspwpZb6_iK7gA'
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
