--- a/Minha API/.env
+++ b/Minha API/.env
@@ -10,6 +10,24 @@ DB_PORT='3006'
 # Configurações do servidor de aplicação
 APP_PORT=3033
 APP_HOST=localhost
-MINHA_CHAVE = 'AIzaSyB7oMl-_EfiesZTz-ky4jspwpZb6_iK7gA'
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# MINHA_CHAVE = 'AIzaSyB7oMl-_EfiesZTz-ky4jspwpZb6_iK7gA'
